# kaumena-api

./: .gitignore  main.py  pyproject.toml  requirements.txt
app/: __init__.py  logger.py  main.py
app/api/v1/: audio.py
app/core/: config.py
app/core/files/: models.yaml
app/services/: config.py  separation.py
app/utils/: zip.py
